# Msc_Applied_Informatics

./: README.md
Application Development and Big Data/karakasidis_assignment/: first_assignment.py  main.py  second_assignment.py  third_assignment.py
Application Development and Big Data/kaskalis_assignment/: index.html  script.js  styles.css  volleyball_match(example).csv
Artificial Intelligence Methods and Tools/first_assignment/: report.docx  stacking.mzn
Artificial Intelligence Methods and Tools/second_assignment/: balancedDataOutcomes.csv  combined_data.xlsx  mai24002.ipynb  report.docx  unbalancedDataOutcomes.csv
Artificial Intelligence Methods and Tools/third_assignment/: machine_learning_assignment_2.ipynb  report.docx
Data Management and Analytics in the Cloud/: skeleton.java
Data Management and Analytics in the Cloud/first_assignment/: mai24002_report.docx  pom.xml  script_mai24002  timelog_mai24002
Data Management and Analytics in the Cloud/fourth_assignment/: neo4j_hw4.py  neo4j_queries.txt  results.json
Data Management and Analytics in the Cloud/second_assignment/: second_assignment.docx
Programming - Software Technology in Business/: mai24002_second_assignment.rar
Scientific Computing and Software/: CMakeLists.txt  Scientific_Computing_and_Software  first_assignment.c  first_assignment.h  main.c  parallel_second_assignment.h  second_assignment.h
Scientific Computing and Software/first_assignment/: CMakeLists.txt  first_assignment.h  scientific_computing_report_assignment_1.docx  second_assignment.h
(+56 files in other folders)
